# tf-learning

./: .gitignore  LICENSE  Pipfile  README.md  environment.yml  pyproject.toml  run.py
agents/: __init__.py  abstract_agent.py  agent.py  network_agent.py  random_agent.py
algorithms/: linear_regression_raw.py
engine/: __init__.py  engine.py
networks/: __init__.py  feed_fwd.py
tf_learning/: run.py
tf_learning/agents/: __init__.py  e_greedy_agent.py  network_agent.py
tf_learning/algorithms/: __init__.py  dqn.py
tf_learning/common/: __init__.py  experience.py  summary.py  variables.py
tf_learning/engine/: engine.py
tf_learning/networks/: feed_fwd.py
tf_learning/tests/: test_tf_learning.py
