[tool.poetry]
name = "tf-learning"
version = "0.1.0"
description = ""
authors = ["Anton Matosov <anton.matosov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gym = {extras = ["box2d"],version = "*"}
tensorflow = "*"
numpy = "*"
matplotlib = "*"
jupyter = "*"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
