[tool.poetry]
name = "tf-learning"
version = "0.1.0"
description = ""
authors = ["Anton Matosov <anton.matosov@gmail.com>"]

[tool.poetry.dependencies]
gymnasium = {extras = ["box2d"],version = "*"}
tensorflow = "2.10.x"
numpy = "*"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
